--- a/MainMaterialApp/Masters/SalesB2C/SalesB2C.xaml
+++ b/MainMaterialApp/Masters/SalesB2C/SalesB2C.xaml
@@ -10,7 +10,7 @@
              xmlns:fa="http://schemas.fontawesome.io/icons/"
              mc:Ignorable="d" 
              x:Name="B2CUserControl"
-            
+             Loaded="Screen_Loaded"
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
         
@@ -43,7 +43,6 @@
     <Grid>
         <Grid Panel.ZIndex="1000">
             <StackPanel Orientation="Horizontal" Grid.ColumnSpan="2" VerticalAlignment="Center" HorizontalAlignment="Center">
-                <!--<TextBlock Text="Loading...  " FontWeight="Bold" Foreground="{StaticResource PrimaryHueDarkBrush}" VerticalAlignment="Center"></TextBlock>-->
                 <materialDesign:Card
                       x:Name="Loading"
                     Width="40"
@@ -216,10 +215,6 @@
                         </ComboBox.ItemTemplate>
                     </ComboBox>
                     <DatePicker Name="CategoryDatePicker" Margin="0 0 5 10" Padding="10 7"  Height="35" Grid.Row="2" Grid.Column="5"  materialDesign:HintAssist.Hint="Category Date" Style="{StaticResource MaterialDesignOutlinedDatePicker}" />
-
-
-
-
                 </Grid>
 
                 <Grid Grid.Row="1"  >
@@ -296,7 +291,7 @@
                             </Style>
                         </ScrollViewer.Resources>-->
 
-                        <Grid Grid.Row="2" Height="35"  Background="LightGray"  >
+                        <Grid Grid.Row="2" Height="35"  Background="LightGray" x:Name="TotalsGrid"  >
                             <Grid.RowDefinitions>
                                 <RowDefinition  ></RowDefinition>
 
@@ -334,7 +329,7 @@
                     </ScrollViewer>
 
                 </Grid>
-                <Grid Grid.Row="2" >
+                <Grid Grid.Row="2"  >
                     <Grid.RowDefinitions>
                         <RowDefinition></RowDefinition>
                         <RowDefinition></RowDefinition>
